--- a/Backend-Laboratorio/package.json
+++ b/Backend-Laboratorio/package.json
@@ -12,13 +12,14 @@
   "author": "Database Solutions & IT",
   "license": "ISC",
   "dependencies": {
-    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
     "fs-extra": "^10.1.0",
     "mssql": "^8.1.2",
-    "neat-csv": "^7.0.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
