--- a/Backend-Laboratorio/package.json
+++ b/Backend-Laboratorio/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "fs-extra": "^10.1.0",
     "mssql": "^8.1.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
