--- a/Backend-Laboratorio/package.json
+++ b/Backend-Laboratorio/package.json
@@ -12,6 +12,7 @@
   "author": "Database Solutions & IT",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
